--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,5 +42,5 @@ dependencies = [
 Homepage = "https://github.com/Wood-Dudchenko-lab/woodcode"
 "Bug Tracker" = "https://github.com/Wood-Dudchenko-lab/woodcode/issues"
 
-[tool.setuptools]
-packages = ["woodcode"]
+[tool.setuptools.packages.find]
+include = ["woodcode", "woodcode.*"]
