--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ dependencies = [
     "pandas>=1.3.0",
     "pynwb>=2.0.0",
     "openpyxl>=3.0.0",
-    "hdmf>=3.0.0",
+   # "hdmf>=3.0.0",
     "h5py>=3.0.0",
     "pytz>=2021.1",
     "pynapple==0.7.1",
