--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "woodcode"
-version = "0.1.1"
+version = "0.1.2"
 description = "A python package for neural and behavioural data analysis in Wood/Dudchenko lab"
 readme = "README.md"
 authors = [
@@ -35,6 +35,7 @@ dependencies = [
     "h5py>=3.0.0",
     "pytz>=2021.1",
     "pynapple==0.7.1",
+    "pyyaml>=6.0",
     "selenium"
 ]
 
