--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,9 @@ dependencies = [
     "pytz>=2021.1",
     "pynapple==0.7.1",
     "pyyaml>=6.0",
-    "selenium"
+    "selenium>=4.0.0",
+    "seaborn>=0.11.0",
+    "hampel>=1.0.2"
 ]
 
 [project.urls]
