--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,13 +31,14 @@ dependencies = [
     "pandas>=1.3.0",
     "pynwb>=2.0.0",
     "openpyxl>=3.0.0",
-   # "hdmf>=3.0.0",
+    "hdmf>=3.0.0",
     "h5py>=3.0.0",
     "pytz>=2021.1",
     "pynapple==0.7.1",
     "pyyaml>=6.0",
     "selenium>=4.0.0",
     "seaborn>=0.11.0",
+    "fmatch>=0.0.9"
 ]
 
 [project.urls]
