--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,8 @@ dependencies = [
     "pyyaml>=6.0",
     "selenium>=4.0.0",
     "seaborn>=0.11.0",
-    "fmatch>=0.0.9"
+    "fmatch>=0.0.9",
+    "jupyter>=1.1.1"
 ]
 
 [project.urls]
