Transitioned to original example session.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     "seaborn>=0.11.0",
     "fmatch>=0.0.9",
     "jupyter>=1.1.1"
+    "ndx-franklab-novela",
 ]
 
 [project.urls]
