Added starting_frame to video

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ dependencies = [
     "fmatch>=0.0.9",
     "jupyter>=1.1.1"
     "ndx-franklab-novela",
+    "opencv-python",
 ]
 
 [project.urls]
