Added initial version of add_raw_ephys with single segment support.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,9 +39,11 @@ dependencies = [
     "selenium>=4.0.0",
     "seaborn>=0.11.0",
     "fmatch>=0.0.9",
-    "jupyter>=1.1.1"
+    "jupyter>=1.1.1",
     "ndx-franklab-novela",
     "opencv-python",
+    "spikeinterface",
+    "neuroconv",
 ]
 
 [project.urls]
