Updated coords to comply with schema

--- a/moore_2025/juvenile_metadata.yaml
+++ b/moore_2025/juvenile_metadata.yaml
@@ -23,6 +23,6 @@ Video:
 
 probe:
   - name: probe_1
-    coordinates: [-6.3, 1.6, 3.1] # mm AP, DV, ML from Bregma, BUT Ventral aka down is positive
+    coordinates: [-6.3, 1.6, -3.1] # mm AP, DV, ML from Bregma, BUT Ventral aka down is positive (also note ML is negative here for left hemisphere)
     horizontal_spacing_in_um: 22.5
     reference: A silver ground wire was placed directly above the cerebellum as the reference.
