--- a/moore_2025/adult_metadata.yaml
+++ b/moore_2025/adult_metadata.yaml
@@ -29,5 +29,6 @@ Video:
 
 probe:
   - name: probe_1
-    coordinates: [-7.64, 1.7, 3.3] # mm AP, DV, ML from Bregma, BUT Ventral aka down is positive
+    coordinates: [-7.64, 1.7, -3.3] # mm AP, DV, ML from Bregma, BUT Ventral aka down is positive (also note ML is negative here for left hemisphere)
+    horizontal_spacing_in_um: 22.5
     reference: A silver ground wire was attached to one of the skull screws placed above the cerebellum as the reference.
