Updated code to make data acquisition device metadata-driven.

--- a/moore_2025/adult_metadata.yaml
+++ b/moore_2025/adult_metadata.yaml
@@ -30,5 +30,7 @@ Video:
 probe:
   - name: probe_1
     coordinates: [-7.64, 1.7, -3.3] # mm AP, DV, ML from Bregma, BUT Ventral aka down is positive (also note ML is negative here for left hemisphere)
-    horizontal_spacing_in_um: 22.5
     reference: A silver ground wire was attached to one of the skull screws placed above the cerebellum as the reference.
+    data_acquisition_system: OpenEphys
+    data_acuisition_amplifier: Intan RHD amplifier chip
+    data_acquisition_adc_circuit: Intan RHD adc circuit
