Added descriptions for camera_device and data_acquisition_device.

--- a/moore_2025/adult_metadata.yaml
+++ b/moore_2025/adult_metadata.yaml
@@ -21,6 +21,7 @@ Video:
       description: Video during epoch 4. Video capturing and marker tracking were performed using Bonsai software 51 at 40 Hz. For the adult recordings, images were acquired through an acA1300-75gc Basler camera with a LMVZ4411 Kowa lens, positioned at the ceiling of the rig. This camera was connected to the OpenEphys board, sending a pulse for each frame taken, allowing the synchronisation of the two streams of information.
   CameraDevice:
     name: camera_device 1
+    description: For the adult recordings, images were acquired through an acA1300-75gc Basler camera with a LMVZ4411 Kowa lens, positioned at the ceiling of the rig.
     meters_per_pixel: 0.0016 # TODO: update this value
     manufacturer: Basler
     model: acA1300-75gc
@@ -31,6 +32,7 @@ probe:
   - name: probe_1
     coordinates: [-7.64, 1.7, -3.3] # mm AP, DV, ML from Bregma, BUT Ventral aka down is positive (also note ML is negative here for left hemisphere)
     reference: A silver ground wire was attached to one of the skull screws placed above the cerebellum as the reference.
+    data_acquisition_description: For recording, the implanted silicon probe was connected to an Intan RHD headstage (Intan technologies). The headstage was connected to an Intan RHD standard SPI cable, which was connected to a 3D-printed commutator in the ceiling (custom-made in house). Signals were acquired at 30kHz with an OpenEphys data acquisition system.
     data_acquisition_system: OpenEphys
     data_acuisition_amplifier: Intan RHD amplifier chip
     data_acquisition_adc_circuit: Intan RHD adc circuit
