--- a/moore_2025/juvenile_metadata.yaml
+++ b/moore_2025/juvenile_metadata.yaml
@@ -1,3 +1,6 @@
+# TODO: reorganize metadata between Google Sheet and YAML file once all the metadata has been shared. 
+# The idea would be to include all metadata that is constant for the whole cohort in the yaml file, such as keywords.
+# All the metadata that varies on a per-subject or per-session basis would be in the Google Sheet, such as genotype. 
 Task:
   wake:
     description: The rat was awake and foraging for scattered cereal in a cylindrical open field. The recording environment consisted of a cylindrical arena of 73 cm diameter, with 54 cm tall walls, painted light blue. A prominent visual cue was positioned at the top of the wall on the north side; this was 31.5 cm wide and 26 cm tall and consisted of two black horizontal stripes with a white stripe between them.
