Fixed Camera ID bug.

--- a/moore_2025/juvenile_metadata.yaml
+++ b/moore_2025/juvenile_metadata.yaml
@@ -5,12 +5,15 @@ Task:
   wake:
     description: The rat was awake and foraging for scattered cereal in a cylindrical open field. The recording environment consisted of a cylindrical arena of 73 cm diameter, with 54 cm tall walls, painted light blue. A prominent visual cue was positioned at the top of the wall on the north side; this was 31.5 cm wide and 26 cm tall and consisted of two black horizontal stripes with a white stripe between them.
     environment: cylindrical_open_field
+    camera_id: 0
   sleep:
     description: The rat was given a 90-minute sleep opportunity in a container placed inside the recording arena, during which recordings continued.
     environment: sleep_container
+    camera_id: 0
   wake_cue_rot:
     description: The rat was awake and foraging for scattered cereal in a cylindrical open field. The recording environment consisted of a cylindrical arena of 73 cm diameter, with 54 cm tall walls, painted light blue. A prominent visual cue was positioned at the top of the wall on the north side; this was 31.5 cm wide and 26 cm tall and consisted of two black horizontal stripes with a white stripe between them.
     environment: cylindrical_open_field
+    camera_id: 0
 
 Video:
   ImageSeries:
